--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: http://mazhuang.org
+url: https://doodu@github.com/doodu.github.io
 date_format: "ordinal"
-title: 码志
+title: "日志"
 subtitle: "打码改变人生"
-description: "马壮的个人博客"
+description: "个人博客"
 keywords: 码志, Zhuang Ma, mzlogin, mazhuang
 favicon: /favicon.ico
 timezone: Asia/Shanghai
@@ -94,10 +94,10 @@ twitter_username: mzlogin
 comments_provider: disqus
 # !!!重要!!! 请修改下面两个用户名为你自己申请的
 # !!!Important!!! Please modify usernames below to yours
-duoshuo_username: mazhuang
-disqus_username: mzlogin
+#duoshuo_username: mazhuang
+#disqus_username: mzlogin
 # 在使用 disqus 的时候可点击显示多说评论框
-lazy_load_duoshuo: true
+#lazy_load_duoshuo: true
 
 # ---------------- #
 #    Analytics     #
