--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ date_format: "ordinal"
 title: "日志"
 subtitle: "打码改变人生"
 description: "个人博客"
-keywords: 码志, Zhuang Ma, mzlogin, mazhuang
+keywords: crowns
 favicon: /favicon.ico
 timezone: Asia/Shanghai
 encoding: "utf-8"
@@ -16,11 +16,11 @@ side_bar_repo_limit: 5
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: Zhuang Ma
-organization: Sogou, Inc.
-organization_url: https://www.sogou.com
-location: Beijing, China
-email: chumpma@gmail.com
+author: Lee
+organization: UnionPay, Inc.
+organization_url: https://www.unionpay.com
+location: Shanghai, China
+email: crowns1991@gmail.com
 
 # ---------------- #
 #    Navigation    #
@@ -80,12 +80,7 @@ collections:
 # ---------------- #
 #      Socials     #
 # ---------------- #
-github_username: mzlogin
-douban_username: freedim
-facebook_username: mzlogin
-weibo_username: mzlogin
-zhihu_username: mzlogin
-twitter_username: mzlogin
+github_username: doodu
 
 # ---------------- #
 #      Comments    #
@@ -108,6 +103,6 @@ google:
 # ---------------- #
 #      Datas       #
 # ---------------- #
-skill_software_keywords: [Java, C++, Python, Design Patterns]
-skill_mobile_app_keywords: [Android, Reverse Engineering]
-skill_windows_keywords: [Win32 SDK, DuiLib, WTL, COM, WinDbg]
+skill_software_keywords: [Java, Python, Design Patterns]
+#skill_mobile_app_keywords: [Android, Reverse Engineering]
+#skill_windows_keywords: [Win32 SDK, DuiLib, WTL, COM, WinDbg]
